2008-05-28  Alex Clark  (aclark at aclark dot net)

    Egg-i-fy.

2007-06-25  Jens Klein (jens at bluedynamics dot com)

    we added events to relations on each connect and disconnect.
    within this implementation some cleanup were done. 
    the events are used for exampe by RelationsIndex, but you
    can subscribe to them also to fulfill task need to be done
    on connect or disconnect.

2007-02-25  Philipp Auersperg (phil at bluedynamics.com)

    allowedTypesByInterface now also supports zope3 interfaces

2006-03-30  Daniel Nouri  <daniel (dot) nouri at gmail (dot) com>

	utils.py (adddeleteVocab): I put the ``adddelete_vocab`` script
	onto the filesystem while adding a check for
	``ModifyPortalContent`` on context.  The Python script still
	exists, but it's only an alias now.  Also added tests, which the
	script didn't have.

2006-03-01  Jens Klein <jens@bluedynamics.com>

    field.py: i18n moved in Archetypes 1.4 to 
	Products.Archetypes.generator.i18n

2006-02-04  Daniel Nouri  <dpunktnpunkt at web.de>

	tests: Added more tests to check if multiple refs per triple
	(i.e. same source, target, relationship) are working.  (Note that
	this currently requires the dpunktnpunkt-multipleref branch of
	Archetypes and that it's disallowed by default.

2006-01-28  Daniel Nouri  <dpunktnpunkt at web.de>

	components/inverse.py (InverseImplicator.implyOnDisconnect):
	Improvement of implementation.

2006-01-26  Daniel Nouri  <dpunktnpunkt at web.de>

	components/inverse.py (InverseImplicator): New implementation
	that no longer assumes that there's only one reference with the
	same relationship between two objects.

	interfaces.py (IRuleset.implyOnConnect): No longer care about
	whether a reference with the same triple of (source, target,
	relationship) already exists.

	config.py (ALLOW_MULTIPLE_REFS_PER_TRIPLE): Added configuration
	option for updateReferences argument of
	ReferenceEngine.addReference.  It's turned off by default.
